<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@drawable/sign_in">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/log_in"
        android:textColor="@color/Dip.White"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emailField"
        android:layout_alignStart="@+id/emailField"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="-40dp"
        android:fontFamily="@font/ubuntu"
        android:textColor="@color/Dip.Red"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/loginText"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/email_style"
        android:drawableLeft="@drawable/icon_email"
        android:drawablePadding="10dp"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:textColorHint="#80ffffff"
        android:textColor="@color/Dip.White"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/emailField"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/email_style"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColorHint="#80ffffff"
        android:textColor="@color/Dip.White"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/forgottenPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30sp"
        android:background="?selectableItemBackgroundBorderless"
        android:fontFamily="@font/ubuntu"
        android:text="@string/forgot_password"
        android:textColor="@color/Dip.White"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/forgottenPassword"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/sign_in_style"
        android:foreground="?selectableItemBackgroundBorderless"
        android:elevation="10dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/Dip.semi_Black"
        android:textSize="25sp"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/Dip.White"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_marginStart="10sp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/noAccount"
        android:background="?selectableItemBackgroundBorderless"
        android:fontFamily="@font/ubuntu"
        android:text="@string/sign_up"
        android:textColor="@color/Dip.semi_Black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/layout_style_01"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

        <ImageView
            android:id="@+id/home"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/Content_Description"
            android:src="@drawable/icon_home" />

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/Content_Description"
            android:src="@drawable/icon_left_arrow"
            tools:ignore="TouchTargetSizeCheck" />

    </RelativeLayout>

</RelativeLayout>