<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Dip.White">

            <RelativeLayout
                android:id="@+id/menu_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/gradient">

                <ImageView
                    android:id="@+id/menu_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/Content_Description"
                    android:src="@drawable/menu_image" />

                <TextView
                    android:id="@+id/Tajik_flights"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/ubuntu"
                    android:gravity="center"
                    android:text="@string/logo_top"
                    android:textColor="@color/Dip.White"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/account"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/Content_Description"
                    android:src="@drawable/icon_account" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/mainPage_topImage"
                android:layout_width="match_parent"
                android:layout_height="274dp"
                android:layout_below="@+id/menu_layout"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/Content_Description"
                android:src="@drawable/main_image_1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@+id/menu_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/Content_Description"
                android:src="@drawable/logo_image" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="410dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/Content_Description"
                android:src="@drawable/city_profile_1" />

            <TextView
                android:id="@+id/cityList"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@id/mainPage_topImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/textview_style"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:fontFamily="@font/ubuntu"
                android:gravity="center"
                android:hint="@string/hint_choose_a_city"
                android:onClick="popupMenu"
                android:textColor="@color/Dip.Black"
                android:textColorHint="#BCBCBC"
                android:textSize="25sp"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/btn_toFlights"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@id/cityList"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_style"
                android:elevation="5dp"
                android:gravity="center"
                android:onClick="goFlights"
                android:text="@string/main_page_btn"
                android:textAllCaps="false"
                android:textColor="@color/Dip.semi_Black"
                android:textSize="25sp"
                tools:ignore="UsingOnClickInXml" />

        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/menu_header"
            app:menu="@menu/navigation_menu"/>


</androidx.drawerlayout.widget.DrawerLayout>
