<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flights"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/menu_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/gradient">

            <ImageView
                android:id="@+id/menu_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/Content_Description"
                android:src="@drawable/menu_image" />

            <TextView
                android:id="@+id/Tajik_flights"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:fontFamily="@font/ubuntu"
                android:gravity="center"
                android:text="@string/logo_top"
                android:textColor="@color/Dip.White"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/backHome"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@+id/account"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/Content_Description"
                android:src="@drawable/icon_left_arrow"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/account"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/Content_Description"
                android:src="@drawable/icon_account" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/arrivalLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menu_layout"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:layout_toStartOf="@+id/departureLayout"
            android:background="@drawable/textview_style"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:onClick="Arrival"
            android:padding="5dp"
            tools:ignore="TouchTargetSizeCheck,UnusedAttribute,UsingOnClickInXml">

            <ImageButton
                android:id="@+id/landing_plane"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@color/Dip.Transparent"
                android:contentDescription="@string/Content_Description"
                android:onClick="Arrival"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/landing_blue_1"
                tools:ignore="TouchTargetSizeCheck" />


            <TextView
                android:id="@+id/landing_plane_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="25dp"
                android:layout_toEndOf="@+id/landing_plane"
                android:contentDescription="@string/Content_Description"
                android:fontFamily="@font/ubuntu"
                android:text="@string/plane_landing"
                android:textColor="@color/Dip.Blue_darker"
                android:textSize="20sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/departureLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menu_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/textview_style"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:onClick="Departure"
            android:padding="5dp"
            tools:ignore="TouchTargetSizeCheck,UnusedAttribute,UsingOnClickInXml">

            <ImageButton
                android:id="@+id/taking_off_plane"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@color/Dip.Transparent"
                android:contentDescription="@string/Content_Description"
                android:onClick="Departure"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/flying_blue_1"
                tools:ignore="TouchTargetSizeCheck,UsingOnClickInXml" />

            <TextView
                android:id="@+id/taking_off_plane_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="0dp"
                android:layout_toEndOf="@+id/taking_off_plane"
                android:contentDescription="@string/Content_Description"
                android:fontFamily="@font/ubuntu"
                android:text="@string/plane_taking_off"
                android:textColor="@color/Dip.Blue_darker"
                android:textSize="20sp" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/landing_plane_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/arrivalLayout"
            android:layout_marginTop="40dp" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationLayoutFlights"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/navigation_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>